--- a/Mission6/Views/Home/GettoKnowJoel.cshtml
+++ b/Mission6/Views/Home/GettoKnowJoel.cshtml
@@ -1,8 +1,8 @@
 @{
-    Layout = "_Layout";
+    Layout = "_Layout";  // Uses the shared layout page
 }
 @{
-    ViewData["Title"] = "GetToKnowJoel";
+    ViewData["Title"] = "GetToKnowJoel";  // Sets the page title
 }
 
 <div class="text-center">
