--- a/Mission6/Views/Home/Index.cshtml
+++ b/Mission6/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "JoelHiltonFilmCollection";
+    ViewData["Title"] = "JoelHiltonFilmCollection"; //set page title
 }
 <header>
     <title>JoelHiltonFilmCollection</title>
