--- a/Mission6/Views/Shared/_Layout.cshtml
+++ b/Mission6/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieForm">Fill Out a Movie!</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="JoelsMovies">Movie List!</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -47,6 +50,9 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
